# hubble.md

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  skills-lock.json
.agents/skills/implementation/: SKILL.md
.agents/skills/triage/: SKILL.md
.codex/environments/: environment.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml
.github/workflows/: ci.yml  implement-ready-issues.yml  oz-agent-issue-triage.yml
.sisyphus/plans/: ios-local-filesystem.md
apps/desktop/: README.md  index.html  package.json
apps/desktop/assets/: icon.icns
apps/desktop/electron/: main.ts  preload.ts  terminal.ts
apps/desktop/fixtures/playground/: file-index-demo.md  file-index.html
apps/desktop/src/: App.css  App.tsx  appMenu.ts  fileActions.ts  index.css  noteActions.ts  shellBridge.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src/components/: Sidebar.tsx  TabBar.tsx  TerminalPanel.test.tsx  TerminalPanel.tsx  Toolbar.tsx  WorkspaceSwitcher.tsx  useSidebarKeyboardNav.ts
apps/desktop/src/desktopApi/: types.ts
apps/desktop/src/editor/: EmbedExtension.tsx  FormattingPalette.tsx  (+9 more)
apps/desktop/tests/: standalone.test.ts
apps/ios/: .xcode.env.local  deploy.sh  index.html  package.json  tauri.conf.json  vite.config.ts
apps/ios/icons/: README.md
apps/ios/src/: App.tsx  externalFileChange.ts  main.tsx  style.css  tauriApi.ts
apps/ios/src-tauri/: Cargo.toml  Info.ios.plist  build.rs  tauri.conf.json
apps/ios/src-tauri/capabilities/: default.json
apps/ios/src-tauri/icons/: icon.icns
apps/ios/src-tauri/src/: lib.rs  main.rs  pick_file.rs  pick_folder.rs
apps/web/: astro.config.mjs
apps/www/: index.html
apps/www/src/: index.css
docs/agents/: issue-tracker.md  triage-labels.md
docs/plans/: desktop-standalone-mode.md
(+33 files in other folders)
