[package]
name = "hubble"
version = "0.1.17"
edition = "2021"
license = "MIT"
description = "Hubble.md iOS app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Tauri plugins for iOS file system and dialog access (used via invoke)
# These are referenced in the desktop/mobile shell API types
