[package]
name = "hubble"
version = "0.1.0"
edition = "2021"

[lib]
name = "hubble"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["wry", "custom-protocol"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
objc = { version = "0.2", features = ["exception"] }
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSFileCoordinator",
    "NSFileManager",
    "NSFilePresenter",
    "NSURL",
    "NSError",
    "NSString",
    "NSObject",
] }
objc2-ui-kit = { version = "0.3", features = [
    "UIAlert",
    "UIAlertController",
    "UITextField",
    "UIViewController",
    "block2",
] }

[patch.crates-io]
tao = { path = "tao-local" }
